2002-09-09  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* m4/init.m4: Execute cygpath in a sub-shell.

2002-09-08  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (macro_define): Warn about `:=' assignments.
	* tests/colneq.test: Check for this warning.

	* automake.texi (Include): Fragments are always distributed.
	* NEWS: Likewise.

2002-09-08  Andreas Buening  <andreas.buening@nexgo.de>

	Fix for automake/334:
	* lib/am/depend2.am: Replaced "cygpath -w" by $(CYGPATH_W).
	* m4/init.m4: New make variable CYGPATH_W.

2002-09-08  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* configure.in: Check for EGREP and FGREP.  Create tests/defs.
	* tests/defs: Rename as ...
	* tests/defs.in: ... this.  Add copyright notice.  Use configure's
	values for PERL, EGREP, and FGREP.  Be verbose if $srcdir is unset.
	* tests/Makefile.am (EXTRA_DIST): Remove defs.
	(BUILT_SOURCES): New.
	* tests/acinclude.test, tests/aclibobj.test, tests/aclocal.test,
	tests/aclocali.test, tests/aclocali1.test, tests/aclocalii.test,
	tests/acoutnoq.test, tests/acoutput.test, tests/acoutput2.test,
	tests/acoutqnl.test, tests/acouttbs.test, tests/acouttbs2.test,
	tests/acsilent.test, tests/acsubst.test, tests/acsubst2.test,
	tests/all.test, tests/alpha.test, tests/amassign.test,
	tests/ammissing.test, tests/ansi.test, tests/ansi2.test,
	tests/ansi3.test, tests/ansi4.test, tests/ansi5.test,
	tests/ansi6.test, tests/ansi7.test, tests/ansi8.test,
	tests/ar.test, tests/asm.test, tests/autoheader.test,
	tests/autoheader2.test, tests/auxdir.test, tests/auxdir2.test,
	tests/backsl.test, tests/backsl2.test, tests/badline.test,
	tests/badopt.test, tests/badprog.test, tests/block.test,
	tests/canon.test, tests/canon2.test, tests/canon3.test,
	tests/canon4.test, tests/canon5.test, tests/ccnoco.test,
	tests/check.test, tests/checkall.test, tests/clean.test,
	tests/colneq.test, tests/colneq2.test, tests/colon.test,
	tests/colon2.test, tests/colon3.test, tests/colon4.test,