@@ -1,4 +1,4 @@
-@set UPDATED 8 September 2002
+@set UPDATED 9 September 2002
 @set UPDATED-MONTH September 2002
 @set EDITION 1.6c
 @set VERSION 1.6c
