@@ -1,5 +1,8 @@
 2002-09-09  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
+	* tests/Makefile.am ($(TESTS)): New, depends on defs.
+	(BUILT_SOURCES): Remove (useless because of PR/359).
+
 	* m4/init.m4: Execute cygpath in a sub-shell.
 
 2002-09-08  Alexandre Duret-Lutz  <duret_g@epita.fr>
